# leeca_proxmox

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  rust-toolchain.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependabot.yml  pr.yml
examples/: main.rs
examples/auth/: login.rs  session_persistence.rs
examples/resources/: cluster_resources.rs  node_management.rs  vm_operations.rs
src/: lib.rs  main.rs
src/auth/: mod.rs
src/auth/application/: mod.rs
src/auth/application/request/: login_request.rs  mod.rs
src/auth/application/response/: login_response.rs  mod.rs
src/auth/application/service/: login_service.rs  mod.rs
src/core/: mod.rs
src/core/domain/: mod.rs
src/core/domain/error/: mod.rs
src/core/domain/model/: cluster_resource.rs  mod.rs  node_dns.rs  node_list_item.rs  node_status.rs  proxmox_auth.rs  proxmox_connection.rs  vm.rs
src/core/domain/value_object/: base_value_object.rs  mod.rs  proxmox_csrf_token.rs  proxmox_host.rs  proxmox_password.rs  proxmox_port.rs  proxmox_realm.rs  proxmox_ticket.rs  proxmox_uri.rs  proxmox_username.rs  serde_helpers.rs
src/core/infrastructure/: api_client.rs  mod.rs
src/tests/: integration.rs
src/tests/resources/: cluster_tests.rs  mod.rs  node_tests.rs  vm_tests.rs
