[package]
name = "leeca_proxmox"
version = "0.1.0"
edition = "2021"
authors = ["4rkh4m <4rkham@proton.me>"]
description = "A modern, safe, and async-first SDK for interacting with Proxmox Virtual Environment servers"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/0x4rkh4m/leeca_proxmox"
repository = "https://github.com/0x4rkh4m/leeca_proxmox"
documentation = "https://docs.rs/leeca_proxmox"
keywords = ["proxmox", "sdk", "async", "virtualization", "api"]

[dependencies]
async-trait = "0.1.85"
futures = "0.3.31"
mockall = "0.13.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = { version = "2.0.11", features = ["std"] }
tokio = { version = "1.43.0", features = [
    "sync",
    "net",
    "rt-multi-thread",
    "macros",
    "time",
] }
url = "2.5.4"
wiremock = "0.6.2"
zxcvbn = "3.1.0"
