[package]
name = "leeca_proxmox"
version = "0.2.0"
edition = "2024"
authors = ["4rkh4m <4rkham@proton.me>"]
description = "A modern, safe, and async-first SDK for interacting with Proxmox Virtual Environment servers"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/0x4rkh4m/leeca_proxmox"
repository = "https://github.com/0x4rkh4m/leeca_proxmox"
documentation = "https://docs.rs/leeca_proxmox"
keywords = ["proxmox", "sdk", "async", "virtualization", "api"]
categories = ["api-bindings", "virtualization"]
resolver = "3"

[dependencies]
async-trait = "0.1.89"
#futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
    "sync",
    "net",
    "rt-multi-thread",
    "macros",
    "time",
] }
url = "2.5.8"
zxcvbn = "3.1.0"

[dev-dependencies]
dotenvy = "0.15.7"
mockall = "0.14.0"
wiremock = "0.6.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
